appId: com.vaughn.spidify
---
- launchApp
- assertVisible: "Spidify"
- tapOn: "Spidify"
- assertVisible: "Design document"
- tapOn: "Design document"
- assertVisible: "Cancel"
- tapOn: "Cancel"
- assertVisible: "Open phase results"
- tapOn: "Open phase results"
- assertVisible: "Close"
- tapOn: "Close"




